[gd_scene load_steps=5 format=2]

[ext_resource path="res://textures/2D Assets/Font/consolab.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://textures/menu_theme.theme" type="Theme" id=2]
[ext_resource path="res://scenes/Menu/main_menu.gd" type="Script" id=3]

[sub_resource type="DynamicFont" id=1]
size = 35
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
use_filter = true
font_data = ExtResource( 1 )

[node name="menu" type="Node2D"]
script = ExtResource( 3 )

[node name="CenterContainer" type="CenterContainer" parent="."]
margin_right = 40.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CanvasLayer" type="CanvasLayer" parent="CenterContainer"]

[node name="VBoxContainer2" type="VBoxContainer" parent="CenterContainer/CanvasLayer"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -142.5
margin_top = -72.5
margin_right = 142.5
margin_bottom = 72.5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="CenterContainer/CanvasLayer/VBoxContainer2"]
margin_right = 285.0
margin_bottom = 35.0
custom_fonts/font = SubResource( 1 )
text = "Escape the Maze"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer/CanvasLayer/VBoxContainer2"]
margin_top = 39.0
margin_right = 285.0
margin_bottom = 145.0
theme = ExtResource( 2 )
custom_constants/separation = 10
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Singleplayer" type="Button" parent="CenterContainer/CanvasLayer/VBoxContainer2/VBoxContainer"]
margin_right = 285.0
margin_bottom = 19.0
text = "Singleplayer"

[node name="Multiplayer" type="Button" parent="CenterContainer/CanvasLayer/VBoxContainer2/VBoxContainer"]
margin_top = 29.0
margin_right = 285.0
margin_bottom = 48.0
disabled = true
text = "Multiplayer"

[node name="Settings" type="Button" parent="CenterContainer/CanvasLayer/VBoxContainer2/VBoxContainer"]
margin_top = 58.0
margin_right = 285.0
margin_bottom = 77.0
text = "Settings"

[node name="Quit" type="Button" parent="CenterContainer/CanvasLayer/VBoxContainer2/VBoxContainer"]
margin_top = 87.0
margin_right = 285.0
margin_bottom = 106.0
text = "Quit"
[connection signal="pressed" from="CenterContainer/CanvasLayer/VBoxContainer2/VBoxContainer/Singleplayer" to="." method="_on_Singleplayer_pressed"]
[connection signal="pressed" from="CenterContainer/CanvasLayer/VBoxContainer2/VBoxContainer/Multiplayer" to="." method="_on_Multiplayer_pressed"]
[connection signal="pressed" from="CenterContainer/CanvasLayer/VBoxContainer2/VBoxContainer/Settings" to="." method="_on_Settings_pressed"]
[connection signal="pressed" from="CenterContainer/CanvasLayer/VBoxContainer2/VBoxContainer/Quit" to="." method="_on_Quit_pressed"]
