[gd_scene load_steps=3 format=2]

[ext_resource path="res://textures/menu_theme.theme" type="Theme" id=2]
[ext_resource path="res://scenes/Menu/main_menu.gd" type="Script" id=3]

[node name="settings" type="Node2D"]
script = ExtResource( 3 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -132.0
margin_top = -44.0
margin_right = 132.0
margin_bottom = 44.0
theme = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Music Slider" type="HBoxContainer" parent="CanvasLayer/VBoxContainer"]
margin_right = 264.0
margin_bottom = 19.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Music" type="Label" parent="CanvasLayer/VBoxContainer/Music Slider"]
margin_right = 50.0
margin_bottom = 19.0
text = "Music"
align = 1
valign = 1

[node name="Music Slider" type="HSlider" parent="CanvasLayer/VBoxContainer/Music Slider"]
margin_left = 54.0
margin_right = 254.0
margin_bottom = 16.0
value = 100.0
editable = false

[node name="Sound Slider" type="HBoxContainer" parent="CanvasLayer/VBoxContainer"]
margin_top = 23.0
margin_right = 264.0
margin_bottom = 42.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sound" type="Label" parent="CanvasLayer/VBoxContainer/Sound Slider"]
margin_right = 60.0
margin_bottom = 19.0
text = "Sounds"
align = 1
valign = 1

[node name="Sound Slider" type="HSlider" parent="CanvasLayer/VBoxContainer/Sound Slider"]
margin_left = 64.0
margin_right = 264.0
margin_bottom = 16.0
value = 100.0
editable = false

[node name="Controls" type="Button" parent="CanvasLayer/VBoxContainer"]
margin_top = 46.0
margin_right = 264.0
margin_bottom = 65.0
text = "Controls"

[node name="Menu" type="Button" parent="CanvasLayer/VBoxContainer"]
margin_top = 69.0
margin_right = 264.0
margin_bottom = 88.0
theme = ExtResource( 2 )
text = "Back to Menu"
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="CanvasLayer/VBoxContainer/Controls" to="." method="_on_Controls_pressed"]
[connection signal="pressed" from="CanvasLayer/VBoxContainer/Menu" to="." method="_on_Menu_pressed"]
